--- a/app/index.html
+++ b/app/index.html
@@ -81,23 +81,79 @@
 			</div>
 			<div class="advantages">
 				<div class="container">
-					<div class="flex bg-white jcsa">
+					<div class="flex jcsa">
 						<div class="item">
 							<div class="spec-icon"></div>
 							<div class="title">Изготовление окон за 5 дней</div>
 						</div>
 						<div class="item">
 							<div class="spec-icon"></div>
-							<div class="title">Изготовление окон за 5 дней</div>
+							<div class="title">Изготовление потолка за 1 день</div>
 						</div>
 						<div class="item">
 							<div class="spec-icon"></div>
-							<div class="title">Изготовление окон за 5 дней</div>
+							<div class="title">Работаем без выходных</div>
 						</div>
 						<div class="item">
 							<div class="spec-icon"></div>
-							<div class="title">Изготовление окон за 5 дней</div>
+							<div class="title">Беспроцентная рассрочка</div>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="section services">
+			<div class="container">
+				<h2 class="h2 heading-line">Наши услуги</h2>
+				<div class="grid col-1-1-1">
+					<a href="#" class="item">
+						<div class="bg-image" data-bg="img/@2x/okna.jpg"></div>
+						<div class="h6 title">Установка<br> пластиковых окон</div>
+					</a>
+					<a href="#" class="item">
+						<div class="bg-image" data-bg="img/@2x/preview.jpg"></div>
+						<div class="h6 title">Остекление балконов<br> и лоджий</div>
+					</a>
+					<a href="#" class="item">
+						<div class="bg-image" data-bg="img/@2x/nat_potolki.jpg"></div>
+						<div class="h6 title">Натяжные потолки</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="section production bg-gray lazy-background">
+			<div class="container">
+				<div class="grid col-1-1">
+					<div>
+						<div class="h2">Только качественная продукция!</div>
+						<p>Мы дилеры крупного московского оконного завода "Пластика окон" (он входит в десятку крупнейших оконных заводов России). Мы готовы дать цены дешевле, чем многие производители. При этом качество у нас будет намного выше.</p>
+						<p>Мы следим за качеством продукции и соблюдением сроков. Наша цель, чтобы клиент был доволен результатом и сервисом!</p>
+						<ul class="list-inline flex jcsb">
+							<li>
+								<div class="spec-icon"></div>
+								<div class="title text-center"><strong>Качественный профиль</strong></div>
+							</li>
+							<li>
+								<div class="spec-icon"></div>
+								<div class="title text-center"><strong>Соответствие ГОСТам</strong></div>
+							</li>
+							<li>
+								<div class="spec-icon"></div>
+								<div class="title text-center"><strong>Проверка и испытания</strong></div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="section brands">
+			<div class="container">
+				<div class="grid col-5-7">
+					<div class="h2">Мы работаем только<br> <span>с проверенными</span> брендами</div>
+					<div class="brand-list flex aic jcsb">
+						<img src="img/rehau.jpg" alt="" class="img-responsive">
+						<img src="img/melke.jpg" alt="" class="img-responsive">
+						<img src="img/siegenia.jpg" alt="" class="img-responsive">
 					</div>
 				</div>
 			</div>
