--- a/app/index.html
+++ b/app/index.html
@@ -210,6 +210,32 @@
 				</div>
 			</div>
 		</div>
+		<div class="section bg-gray">
+			<div class="container">
+				<div class="h2 heading-line">Задайте вопрос нашим менеджерам</div>
+				<div class="form">
+					<div class="grid col-1-2">
+						<div class="col">
+							<div class="form-group"><input type="text" class="form-control" placeholder="Ваше имя"></div>
+							<div class="form-group"><input type="text" class="form-control" placeholder="Ваше имя"></div>
+							<div class="form-group"><input type="text" class="form-control" placeholder="Ваше имя"></div>
+						</div>
+						<div class="col">
+							<div class="form-group">
+								<textarea name="" id="" class="form-control"></textarea>
+							</div>
+							<div class="agreement grid col-2-1 aic">
+								<label class="checkbox">
+									<input type="checkbox" name="check[]" id="check" class="check" checked=""><i></i> Я согласен с <a href="#">Политикой конфиденциальности на сайте</a>
+								</label>
+								<button class="btn btn-default btn-lg"><span>Отправить</span><span class="arrow-right-longtail"></span></button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+		</div>
 		<div class="map">
 			<div id="map-canvas"></div>
 			<div class="contact-block">
