--- a/app/shop.html
+++ b/app/shop.html
@@ -18,7 +18,7 @@
 			<div class="container">
 				<div class="flex jcsb aic">
 					<div class="logo">
-						<a href="#"><img src="img/logo.png" alt="" class="img-responsive"></a>
+						<a href="/"><img src="img/logo.png" alt="" class="img-responsive"></a>
 					</div>
 					<div class="contact icon">
 						<div class="phone dropdown">
@@ -41,7 +41,7 @@
 		<nav class="navbar">
 			<div class="container">
 				<ul class="navbar-nav">
-					<li class="active"><a href="#">Главная</a></li>
+					<li class="active"><a href="/">Главная</a></li>
 					<li><a href="#">Окна</a></li>
 					<li><a href="#">Балконы и лоджии</a></li>
 					<li><a href="#">Двери</a></li>
@@ -74,7 +74,9 @@
 							<a href="#" class="title">Москитная сетка оконная 530х1130 (коричневая)</a>
 							<div class="price">1 100 руб.</div>
 						</div>
-						<div class="btn btn-default"><span>Заказать</span></div>
+						<div class="product-footer">
+							<div class="btn btn-default"><span>Заказать</span></div>
+						</div>
 					</div>
 					<div class="product">
 						<a href="#" class="thumb"><img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/podokonnik.jpg" data-srcset="img/@2x/podokonnik.jpg" alt="" class="lazy img-responsive"></a>
@@ -82,7 +84,9 @@
 							<a href="#" class="title">Москитная сетка оконная 530х1130 (коричневая)</a>
 							<div class="price">1 100 руб.</div>
 						</div>
-						<div class="btn btn-default">Заказать</div>
+						<div class="product-footer">
+							<div class="btn btn-default"><span>Заказать</span></div>
+						</div>
 					</div>
 					<div class="product">
 						<a href="#" class="thumb"><img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/maskitka.jpg" data-srcset="img/@2x/maskitka.jpg" alt="" class="lazy img-responsive"></a>
@@ -90,7 +94,9 @@
 							<a href="#" class="title">Москитная сетка оконная 530х1130 (коричневая)</a>
 							<div class="price">1 100 руб.</div>
 						</div>
-						<div class="btn btn-default">Заказать</div>
+						<div class="product-footer">
+							<div class="btn btn-default"><span>Заказать</span></div>
+						</div>
 					</div>
 					<div class="product">
 						<a href="#" class="thumb"><img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/mask_white.jpg" data-srcset="img/@2x/mask_white.jpg" alt="" class="lazy img-responsive"></a>
@@ -98,7 +104,9 @@
 							<a href="#" class="title">Москитная сетка оконная 530х1130 (коричневая)</a>
 							<div class="price">1 100 руб.</div>
 						</div>
-						<div class="btn btn-default">Заказать</div>
+						<div class="product-footer">
+							<div class="btn btn-default"><span>Заказать</span></div>
+						</div>
 					</div>
 					<div class="product">
 						<a href="#" class="thumb"><img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/maskitka.jpg" data-srcset="img/@2x/maskitka.jpg" alt="" class="lazy img-responsive"></a>
@@ -106,7 +114,9 @@
 							<a href="#" class="title">Москитная сетка оконная 530х1130 (коричневая)</a>
 							<div class="price">1 100 руб.</div>
 						</div>
-						<div class="btn btn-default">Заказать</div>
+						<div class="product-footer">
+							<div class="btn btn-default"><span>Заказать</span></div>
+						</div>
 					</div>
 				</div>
       </div>
