--- a/app/gallery.html
+++ b/app/gallery.html
@@ -67,7 +67,7 @@
 		<div class="section">
 			<h2 class="h2 heading-line">Наши работы</h2>
 			<div class="container">
-				<p class="text-center">Здесь мы собрали наши работы выполненные за последние 3 года</p>
+				<p class="intro text-center">Здесь мы собрали наши работы выполненные за последние 3 года</p>
 			</div>
 			<div class="grid zoom-gallery">
 				<a href="img/_src/gallery-1.jpg"><img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/_src/gallery-1.jpg" data-srcset="img/_src/gallery-1.jpg" alt="" class="lazy img-responsive"></a>
