--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,18 @@
 				</a>
 			</div>
 		</div>
+
+		<div class="section scheme">
+			<div class="container">
+				<h2 class="h2 heading-line">Пластиковые окна &laquo;под ключ&raquo;</h2>
+				<p class="intro text-center">Мы предлагаем полный комплекс работ по установке окон с отделкой «под ключ» в Москве. Окна без лишних опций легко подобрать с нашим консультантом и сделать заказ еще дешевле.</p>
+				<div class="shema-wrap">
+					<div class="pointer left"><strong>откосы</strong>от 700 руб.<i></i></div>
+					<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/shema.png" data-srcset="img/shema.png" alt="" class="lazy img-responsive">
+				</div>
+			</div>
+		</div>
+
 		<div class="section services">
 			<div class="container">
 				<h2 class="h2 heading-line">Наши услуги</h2>
@@ -131,7 +143,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section production bg-gray lazy-background">
+		<div class="section production bg-gray" data-bg="img/production_bg.png">
 			<div class="container">
 				<div class="grid col-1-1">
 					<div>
