--- a/app/index.html
+++ b/app/index.html
@@ -68,8 +68,8 @@
 			<div class="owl-carousel">
 				<div class="item">
 					<img alt="" class="lazy img-responsive example-img" src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-								data-src="img/@2x/slide-1.jpg"
-								data-srcset="img/@1x/slide-1.jpg 1x, img/@2x/slide-1.jpg 2x">
+					data-src="img/@2x/slide-1.jpg"
+					data-srcset="img/@1x/slide-1.jpg 1x, img/@2x/slide-1.jpg 2x">
 					<div class="item-content">
 						<div class="container">
 							<div class="h1">Пластиковые окна <br> и натяжные потолки</div>
@@ -118,16 +118,67 @@
 				<h2 class="h2 heading-line">Пластиковые окна &laquo;под ключ&raquo;</h2>
 				<p class="intro text-center">Мы предлагаем полный комплекс работ по установке окон с отделкой «под ключ» в Москве. Окна без лишних опций легко подобрать с нашим консультантом и сделать заказ еще дешевле.</p>
 				<div class="shema-wrap">
-					<div class="pointer left"><strong>откосы</strong>от 700 руб.<i></i></div>
 					<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/shema.png" data-srcset="img/shema.png" alt="" class="lazy img-responsive">
+					<div class="pointer left"><strong>откосы</strong>от 700 руб.<i></i></div>
+					<div class="pointer left"><strong>Фурнитура</strong>от 700 руб.<i></i></div>
+					<div class="pointer left"><strong>Подоконник</strong>от 700 руб.<i></i></div>
+					<span class="pointer right"><strong>Стеклопакет</strong>от 700 руб.<i></i></span>
+					<span class="pointer right"><strong>Ручка</strong>от 700 руб.<i></i></span>
+				</div>
+				<div class="triple">
+					<form action="#" class="form">
+						<h5 class="h5 text-center">Оставьте заявку и наши менеджеры проконсультируют вас!</h5>
+						<div class="grid col-4-auto">
+							<div class="form-group"><input type="text" class="form-control" placeholder="Ваше имя"></div>
+							<div class="form-group"><input type="text" class="form-control" placeholder="Электронная почта"></div>
+							<div class="form-group"><input type="text" class="form-control phone-mask" placeholder="Котактный номер телефона"></div>
+							<div class="form-group"><button class="btn btn-default btn-block"><span>Отправить</span></button></div>
+						</div>	
+						<div class="agreement text-center">
+							<label class="checkbox">
+								<input type="checkbox" name="check[]" id="check" class="check" checked=""><i></i> Я согласен с <a href="#">Политикой конфиденциальности на сайте</a>
+							</label>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
-
+		<div class="section goods">
+			<div class="container">
+				<h2 class="h2 heading-line">Цены на популярные размеры окон</h2>
+				<div class="grid col-3-auto">
+					<div class="item">
+						<span class="product-label">от 6300 р.</span>
+						<div class="thumb">
+							<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/window-2x.jpg" data-srcset="img/@2x/window-2x.jpg" alt="" class="lazy img-responsive">
+						</div>
+						<div class="h5">Двухстворчатое окно</div>
+						<div class="btn btn-default"><span>Заказать</span></div>
+					</div>
+					<div class="item">
+						<span class="product-label">от 6300 р.</span>
+						<div class="thumb">
+							<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/window-3x.jpg" data-srcset="img/@2x/window-3x.jpg" alt="" class="lazy img-responsive">
+						</div>
+						<div class="h5">Трёхстворчатое окно</div>
+						<div class="btn btn-default"><span>Заказать</span></div>
+					</div>
+					<div class="item">
+						<span class="product-label">от 10300 р.</span>
+						<div class="thumb">
+							<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@2x/window-b.jpg" data-srcset="img/@2x/window-b.jpg" alt="" class="lazy img-responsive">
+						</div>
+						<div class="h5">Балконный блок</div>
+						<div class="btn btn-default"><span>Заказать</span></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	
 		<div class="section services">
 			<div class="container">
 				<h2 class="h2 heading-line">Наши услуги</h2>
-				<div class="grid col-1-1-1">
+				<div class="grid col-3-auto">
 					<a href="#" class="item">
 						<div class="bg-image" data-bg="img/@2x/okna.jpg"></div>
 						<div class="h5 title">Установка<br> пластиковых окон</div>
@@ -298,13 +349,13 @@
 		</form><br>
 		<p>Или позвоните по номеру: <br>+7(4852) 662-667</p>
 	</div>
-		
-	</div>
-	<script src="js/scripts.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkvD4PB-QT_rqZ7DVahozFj9sMuOzr6Nw"></script>
-	<script>
-	  google.maps.event.addDomListener(window, 'load', initMap([57.627962, 39.882600]));
-  </script> 
+
+</div>
+<script src="js/scripts.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkvD4PB-QT_rqZ7DVahozFj9sMuOzr6Nw"></script>
+<script>
+	google.maps.event.addDomListener(window, 'load', initMap([57.627962, 39.882600]));
+</script> 
 </body>
 </html>
 
