--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,52 @@
 			</div>
 		</div>
 
+		<div class="section">
+			<div class="container">
+				<h2 class="h2 heading-line">Производим монтаж дверей <br> и входных групп всех типов</h2>
+				<div class="advantages door">
+					<div class="flex jcsa">
+						<div class="item">
+							<div class="spec-icon"></div>
+							<div class="title">Подъезды</div>
+						</div>
+						<div class="item">
+							<div class="spec-icon"></div>
+							<div class="title">Офисные здания</div>
+						</div>
+						<div class="item">
+							<div class="spec-icon"></div>
+							<div class="title">Магазины, салоны и кафе</div>
+						</div>
+						<div class="item">
+							<div class="spec-icon"></div>
+							<div class="title">Муниципальные и спортивные объекты</div>
+						</div>
+						<div class="item">
+							<div class="spec-icon"></div>
+							<div class="title">Супермаркеты</div>
+						</div>
+						<div class="item">
+							<div class="spec-icon"></div>
+							<div class="title">Частные дома</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="section production left" data-bg="img/master.png">
+			<div class="container">
+				<div class="grid col-1-1">
+					<div>
+						<div class="h2">Нужны нестандартные двери или входная группа?</div>
+						<p>Просто вызовите замерщика <br>в удобное для вас время и всего на 15 минут!</p>
+						<button class="btn btn-default btn-lg"><span>Вызвать замерщика</span><span class="arrow-right-longtail"></span></button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="section scheme">
 			<div class="container">
 				<h2 class="h2 heading-line">Пластиковые окна &laquo;под ключ&raquo;</h2>
