--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
 				<div class="container">
 					<div class="flex jcsa">
 						<div class="item">
-							<div class="spec-icon door"></div>
+							<div class="spec-icon rule"></div>
 							<div class="title">Изготовление окон за 5 дней</div>
 						</div>
 						<div class="item">
@@ -111,6 +111,31 @@
 					<span>Вызвать замерщика</span>
 				</a>
 			</div>
+		</div>
+		
+		<div class="section selection bg-gray">
+			<div class="container">
+      	<h2 class="h2 heading-line">Соберите свой потолок!<br>А мы его рассчитаем</h2>
+    		<ul class="list-inline nav-tab">
+					<li><a href="#" class="active">Матовый</a></li>
+					<li><a href="#">Глянцевый</a></li>
+					<li><a href="#">Сатиновый</a></li>
+					<li><a href="#">Тканевый</a></li>
+				</ul>
+				<div class="tab-content">
+					
+				</div>
+				<div class="specific">
+					<ul class="list-inline">
+						<li>
+							<a href="#">
+								<img class="lazy img-responsive"	src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@1x/odnourovneviy.jpg" data-srcset="img/@2x/odnourovneviy.jpg 1x" alt="">
+								<span class="title">Одноуровневый</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+    	</div>
 		</div>
 
 		<div class="section">
@@ -163,8 +188,8 @@
 			<div class="container">
 				<h2 class="h2 heading-line">Пластиковые окна &laquo;под ключ&raquo;</h2>
 				<p class="intro text-center">Мы предлагаем полный комплекс работ по установке окон с отделкой «под ключ» в Москве. Окна без лишних опций легко подобрать с нашим консультантом и сделать заказ еще дешевле.</p>
-				<div class="shema-wrap">
-					<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/shema.png" data-srcset="img/shema.png" alt="" class="lazy img-responsive">
+				<div class="shema-wrap shema-balkon">
+					<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/shema-balkon.jpg" data-srcset="img/shema-balkon.jpg" alt="" class="lazy img-responsive">
 					<div class="pointer left"><strong>откосы</strong>от 700 руб.<i></i></div>
 					<div class="pointer left"><strong>Фурнитура</strong>от 700 руб.<i></i></div>
 					<div class="pointer left"><strong>Подоконник</strong>от 700 руб.<i></i></div>
@@ -240,7 +265,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section production bg-gray" data-bg="img/production_bg.png">
+		<div class="section production potolok bg-gray" data-bg="img/production_bg.png">
 			<div class="container">
 				<div class="grid col-1-1">
 					<div>
