--- a/app/index.html
+++ b/app/index.html
@@ -330,8 +330,8 @@
 			<div class="container">
 				<h2 class="h2 heading-line">Пластиковые окна &laquo;под ключ&raquo;</h2>
 				<p class="intro text-center">Мы предлагаем полный комплекс работ по установке окон с отделкой «под ключ» в Москве. Окна без лишних опций легко подобрать с нашим консультантом и сделать заказ еще дешевле.</p>
-				<div class="shema-wrap shema-balkon">
-					<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/shema-balkon.jpg" data-srcset="img/shema-balkon.jpg" alt="" class="lazy img-responsive">
+				<div class="shema-wrap">
+					<img src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/shema.png" data-srcset="img/shema.png" alt="" class="lazy img-responsive">
 					<div class="pointer left"><strong>откосы</strong>от 700 руб.<i></i></div>
 					<div class="pointer left"><strong>Фурнитура</strong>от 700 руб.<i></i></div>
 					<div class="pointer left"><strong>Подоконник</strong>от 700 руб.<i></i></div>
@@ -349,7 +349,7 @@
 						</div>	
 						<div class="agreement text-center">
 							<label class="checkbox">
-								<input type="checkbox" name="check[]" id="check" class="check" checked=""><i></i> Я согласен с <a href="#">Политикой конфиденциальности на сайте</a>
+								<input type="checkbox" name="check[]" id="check" class="check" checked=""><i></i> <span>Я согласен с <a href="#">Политикой конфиденциальности на сайте</a></span>
 							</label>
 						</div>
 					</form>
@@ -512,7 +512,7 @@
 							</div>
 							<div class="agreement grid col-2-1 aic">
 								<label class="checkbox">
-									<input type="checkbox" name="check[]" id="check" class="check" checked=""><i></i> Я согласен с <a href="#">Политикой конфиденциальности на сайте</a>
+									<input type="checkbox" name="check[]" id="check" class="check" checked=""><i></i> <span>Я согласен с <a href="#">Политикой конфиденциальности на сайте</a></span>
 								</label>
 								<button class="btn btn-default btn-lg"><span>Отправить</span><span class="arrow-right-longtail"></span></button>
 							</div>
