--- a/app/index.html
+++ b/app/index.html
@@ -118,14 +118,14 @@
       	<h2 class="h2 heading-line">Расчитайте стоимость своего балкона</h2>
     		<ul class="list-inline nav-tab">
 					<li  class="active">
-						<a href="#">Холодное остекление
+						<label>Холодное остекление
 							<span>Холодное остекление - установка алюминиевого профиля. <br>Створки раздвижные, но могут быть установлены и поворотные. <br> Такое остекление отличается прочностью и долговечностью.</span>
-						</a>
+						</label>
 					</li>
 					<li>
-						<a href="#">Тёплое остекление
+						<label>Тёплое остекление
 							<span>Тёплое остекление - установка ПВХ-профиля.<br>Створки поворотные, но могут быть поставлены поворотно-откидные.<br>Из балкона получается дополнительная комната отдыха или мастерская.</span>
-						</a>
+						</label>
 					</li>
 				</ul>
 				<div class="tab-content">
@@ -133,42 +133,43 @@
 						<div class="specific">
 							<ul class="list-inline">
 								<li>
-									<a href="#">
+									<label>
 										<img class="lazy img-responsive"	src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@1x/odnourovneviy.jpg" data-srcset="img/@2x/odnourovneviy.jpg 1x" alt="">
 										<span class="title">П-образный балкон 3м</span>
-									</a>
+									</label>
 								</li>
 								<li>
-									<a href="#">
+									<label>
 										<img class="lazy img-responsive"	src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@1x/mnogourovneviy.jpg" data-srcset="img/@2x/mnogourovneviy.jpg 1x" alt="">
 										<span class="title">Закругленный П-образный балкон 3м</span>
-									</a>
+									</label>
 								</li>
 								<li>
-									<a href="#">
+									<label>
 										<img class="lazy img-responsive"	src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@1x/volna.jpg" data-srcset="img/@2x/volna.jpg 1x" alt="">
 										<span class="title">Г-образный балкон 3м</span>
-									</a>
+									</label>
 								</li>
 								<li>
-									<a href="#">
+									<label>
 										<img class="lazy img-responsive"	src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@1x/konus.jpg" data-srcset="img/@2x/konus.jpg 1x" alt="">
 										<span class="title">Закругленный Г-образный балкон 3м</span>
-									</a>
+									</label>
 								</li>
 								<li>
-									<a href="#">
+									<label>
 										<img class="lazy img-responsive"	src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs=" data-src="img/@1x/arka.jpg" data-srcset="img/@2x/arka.jpg 1x" alt="">
 										<span class="title">Лоджия 3м</span>
-									</a>
+									</label>
 								</li>
 							</ul>
 						</div>
 						<div class="additional">
 							<div class="title">Внешняя отделка:</div>
 							<div class="grid col-1-1 form-group">
-								<label class="checkbox"><input type="checkbox" name="chec"><i></i>Профнастил</label>
-								<select name="">
+								<label class="checkbox"><input type="checkbox" name="noname" class="control"><i></i>Профнастил</label>
+								<select class="disabled" name="">
+									<option value="" disabled selected>Выбрать</option>
 									<option value="">Белый</option>
 									<option value="">Чёрный</option>
 									<option value="">Красный</option>
@@ -177,26 +178,26 @@
 											
 							<div class="title">Внутренняя отделка:</div>
 							<div class="form-group">
-								<label class="checkbox"><input type="checkbox" name="Пол(доска)"><i></i>Пол доска)</label>
+								<label class="checkbox"><input type="checkbox" name="Пол(доска)"><i></i>Пол доска</label>
 							</div>
 							<div class="form-group">
-								<label class="checkbox"><input type="checkbox" name="Обшивка вагонкой"><i></i>Обшивка вагонкой</label>
-							</div>
-							<div class="color">
-								<ul class="list-inline">
-									<li><a href="#" title="#FFF707" style="background-color: #FFF707"></a></li>
-									<li><a href="#" title="#DB0D00" style="background-color: #DB0D00"></a></li>
-									<li><a href="#" title="#DB7C00" style="background-color: #DB7C00"></a></li>
-									<li><a href="#" title="#A3DB00" style="background-color: #A3DB00"></a></li>
-									<li><a href="#" title="#35DB2B" style="background-color: #35DB2B"></a></li>
-									<li><a href="#" title="#3CC5E1" style="background-color: #3CC5E1"></a></li>
-									<li><a href="#" title="#0019DB" style="background-color: #0019DB"></a></li>
-									<li><a href="#" title="#6A00DB" style="background-color: #6A00DB"></a></li>
-									<li><a href="#" title="#D400DB" style="background-color: #D400DB"></a></li>
-									<li><a href="#" title="#DB085F" style="background-color: #DB085F"></a></li>
-									<li><a href="#" title="#964C6B" style="background-color: #964C6B"></a></li>
-									<li><a href="#" title="#CDCDCD" style="background-color: #CDCDCD"></a></li>
-								</ul>
+								<label class="checkbox form-group"><input type="checkbox" class="control" name="Обшивка вагонкой"><i></i>Обшивка вагонкой</label>
+								<div class="color disabled">
+									<ul class="list-inline">
+										<li><label title="#FFF707" style="background-color: #FFF707"><input type="checkbox"></label></li>
+										<li><label title="#DB0D00" style="background-color: #DB0D00"></label></li>
+										<li><label title="#DB7C00" style="background-color: #DB7C00"></label></li>
+										<li><label title="#A3DB00" style="background-color: #A3DB00"></label></li>
+										<li><label title="#35DB2B" style="background-color: #35DB2B"></label></li>
+										<li><label title="#3CC5E1" style="background-color: #3CC5E1"></label></li>
+										<li><label title="#0019DB" style="background-color: #0019DB"></label></li>
+										<li><label title="#6A00DB" style="background-color: #6A00DB"></label></li>
+										<li><label title="#D400DB" style="background-color: #D400DB"></label></li>
+										<li><label title="#DB085F" style="background-color: #DB085F"></label></li>
+										<li><label title="#964C6B" style="background-color: #964C6B"></label></li>
+										<li><label title="#CDCDCD" style="background-color: #CDCDCD"></label></li>
+									</ul>
+								</div>
 							</div>
 						</div>
 						<button class="btn btn-default btn-lg"><span>Расчитать стоимость</span><span class="arrow-right-longtail"></span></button>
@@ -210,12 +211,12 @@
 			<div class="container">
       	<h2 class="h2 heading-line">Соберите свой потолок!<br>А мы его рассчитаем</h2>
     		<ul class="list-inline nav-tab">
-					<li  class="active"><a href="#">Матовый</a></li>
-					<li><a href="#">Глянцевый</a></li>
-					<li><a href="#">Сатиновый</a></li>
-					<li><a href="#">Тканевый</a></li>
+					<li  class="active"><label>Матовый</a>l<bel/li>
+					<li><label>Глянцевый</label></li>
+					<li><label>Сатиновый</label></li>
+					<li><label>Тканевый</al>bel</li>
 				</ul>
-				<div class="tab-content">
+				<!-- <div class="tab-content">
 					<div class="tab-pane">
 						<div class="specific">
 							<ul class="list-inline">
@@ -276,7 +277,7 @@
 						</div>
 						<button class="btn btn-default btn-lg"><span>Расчитать стоимость</span><span class="arrow-right-longtail"></span></button>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
